added methods for Select Units, AGV and inventory